Fix display on mobile, added pwa support

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -41,3 +41,7 @@
   .footer-price {
     white-space: nowrap;
   }
+
+  .media-content {
+    overflow-x: clip;
+  }
